frontend/src/components/Modals/ConfirmationModal.css
.modal-background {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  z-index: 2;  

  backdrop-filter: blur(3px);

  display: flex;
  justify-content: center;
  align-items: center;
}

.confirmation-modal {
  color: var(--font-color);
  padding: 58px 72px;
  border-radius: var(--border-radius);
  background-color: var(--dark-bg); 
  display: flex;
  flex-direction: column;
}

.modal-text {
  padding: 22px 0px;
  font-weight: 300;
  font-size: 18px;
}

.delete-project-name {
  display: flex;
  justify-content: center;
}

.delete-warning {
  padding-top: 0px;
}

.modal-form {
  padding-top: 22px;
  display: flex;
  flex-direction: column;
  gap: 22px;
}

